// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic function 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"app_Function_IamRole_56665C88\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"app_Function_IamRolePolicy_BD322466\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"app_Function_IamRolePolicyAttachment_B4E996A7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"app_Function_C48386A8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function_S3Object_3291715D.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"app_Function_Bucket_1EEC349E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"app_Function_S3Object_3291715D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`basic function with environment variables 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"app_Function_IamRole_56665C88\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"app_Function_IamRolePolicy_BD322466\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"app_Function_IamRolePolicyAttachment_B4E996A7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"app_Function_C48386A8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BOOM\\": \\"BAM\\",
            \\"FOO\\": \\"BAR\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function_S3Object_3291715D.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"app_Function_Bucket_1EEC349E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"app_Function_S3Object_3291715D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;
